[LOG4J2-420] Create a lookup for resource bundle substitution.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1531064 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -804,6 +804,14 @@ public class Bar {
                 <th>Context</th>
               </tr>
               <tr>
+                <td>bundle</td>
+                <td>
+                  Resource bundle. The format is <code>${dollar}{bundle:BundleName:BundleKey}</code>.
+                  The bundle name follows package naming conventions, for example: 
+                  <code>${dollar}{bundle:com.domain.Messages:MyKey}</code>.
+                </td>
+              </tr>
+              <tr>
                 <td>ctx</td>
                 <td>Thread Context Map (MDC)</td>
               </tr>
