--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -1309,7 +1309,7 @@ at org.apache.logging.log4j.core.pattern.ExtendedThrowableTest.testException(Ext
         <subsection name="XMLLayout">
           <!-- From Javadoc of org.apache.logging.log4j.core.layout.XMLLayout -->
           <p>
-          Appends a series of <code>event</code> elements as defined in the <a href="log4j.dtd">log4j.dtd</a>.
+          Appends a series of <code>Event</code> elements as defined in the <a href="log4j.dtd">log4j.dtd</a>.
           </p>
           <h4>Complete well-formed XML vs. fragment XML</h4>
           <p>
@@ -1323,20 +1323,28 @@ at org.apache.logging.log4j.core.pattern.ExtendedThrowableTest.testException(Ext
           A well-formed XML document follows this pattern:
           </p>
           <pre class="prettyprint linenums">&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;events xmlns=&quot;http://logging.apache.org/log4j/2.0/events&quot;&gt;
-  &lt;event logger=&quot;com.foo.Bar&quot; timestamp=&quot;1373436580419&quot; level=&quot;INFO&quot; thread=&quot;main&quot;&gt;
-    &lt;message&gt;&lt;![CDATA[This is a log message 1]]&gt;&lt;/message&gt;
-  &lt;/event&gt;
-  &lt;event logger=&quot;com.foo.Baz&quot; timestamp=&quot;1373436580420&quot; level=&quot;INFO&quot; thread=&quot;main&quot;&gt;
-    &lt;message&gt;&lt;![CDATA[This is a log message 2]]&gt;&lt;/message&gt;
-  &lt;/event&gt;
-&lt;/events&gt;</pre>
+&lt;Events xmlns=&quot;http://logging.apache.org/log4j/2.0/events&quot;&gt;
+  &lt;Event logger=&quot;com.foo.Bar&quot; timestamp=&quot;1373436580419&quot; level=&quot;INFO&quot; thread=&quot;main&quot;&gt;
+    &lt;Message&gt;&lt;![CDATA[This is a log message 1]]&gt;&lt;/Message&gt;
+    &lt;Marker parent=&quot;Parent Marker&quot;&gt;&lt;Child Marker&gt;&lt;/Marker&gt;
+  &lt;/Event&gt;
+  &lt;Event logger=&quot;com.foo.Baz&quot; timestamp=&quot;1373436580420&quot; level=&quot;INFO&quot; thread=&quot;main&quot;&gt;
+    &lt;Message&gt;&lt;![CDATA[This is a log message 2]]&gt;&lt;/Message&gt;
+    &lt;Marker&gt;&lt;The Marker Name&gt;&lt;/Marker&gt;
+  &lt;/Event&gt;
+&lt;/Events&gt;</pre>
           <p>
           If <code>complete="false"</code>, the appender does not write the XML processing instruction and the root 
           element.
           </p>
           <p>
           This approach enforces the independence of the XMLLayout and the appender where you embed it.
+          </p>
+          <h4>Marker</h4>
+          <p>Markers are represented by a <code>Marker</code> element within the <code>Event</code> element.
+          The <code>Marker</code> element appears only when a marker is used in the log message. The name of the marker's
+          parent will be provided in the <code>parent</code> attribute of the <code>Marker</code> element.
+          Only the leaf marker is included, not the full hierarchy.
           </p>
           <h4>Encoding</h4>
           <p>
