LOG4J2-525 fixed broken link
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1563732 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -913,7 +913,7 @@ public class Bar {
             <i>As a footnote, it is worth pointing out that the variables in the RollingFile appender declaration
             will also not be evaluated when the configuration is processed. This is simply because the resolution
             of the whole RollingFile element is deferred until a match occurs.
-            See <a href="../appenders.html#RoutingAppender">RoutingAppender</a> for more information.</i>
+            See <a href="appenders.html#RoutingAppender">RoutingAppender</a> for more information.</i>
           </p>
         </subsection>
         <a name="StatusMessages"/>
